--- a/.jscsrc
+++ b/.jscsrc
@@ -1,3 +1,5 @@
 {
-  "preset": "google"
+  "preset": "google",
+  "requireCamelCaseOrUpperCaseIdentifiers": "ignoreProperties",
+  "maximumLineLength": 160
 }
