--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "angular": "~1.4.7",
     "less": "~2.5.0",
-    "angular-route": "~1.4.7"
+    "angular-route": "~1.4.7",
+    "lodash": "~3.10.1"
   }
 }
